<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_HomeLagErr" Id="{b33d5979-f1c3-0030-0939-3aa752122f9f}">
    <Declaration><![CDATA[TYPE ST_HomeLagErr :
STRUCT
	LagErr					: LREAL ;
	TriggerOffsetPos		: LREAL ;
	BlockSearchMaxCurrent	: INT;
	BlockExitMaxCurrent		: INT;
	BlockSearchRatedCurrent	: UDINT;
	BlockExitRatedCurrent	: UDINT;
	TorqueLimitPersent		: UINT;	//[%]
	BlockSearchPositionWindow : UDINT;	//[%]
	BlockExitPositionWindow	  : UDINT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>