<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_HomeOptions" Id="{68855441-9247-0a21-3988-88b7aad07fe5}">
    <Declaration><![CDATA[TYPE ST_HomeOptions :
STRUCT
	
	stBasic:		ST_BasicHomeParam;
	stLagErr:		ST_HomeLagErr;	
	stAbsSwitch:	ST_HomeAbsSwitch;
	 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>