<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_Monitor_axis_typ" Id="{12967aec-8733-0e5c-0f85-cb36e9b1c657}">
    <Declaration><![CDATA[TYPE Basic_Monitor_axis_typ : 	
	STRUCT 
		ActPosition : 		LREAL; (*actual position of the axis*)		
		ActVelocity :		LREAL; (*actual velocity of the axis*)
		SetVelocity:		LREAL;
		ActLagError : 		LREAL;
		ActualTorque : 		LREAL;
		ActualCurrent : 	LREAL;
		ModuloActPos : 		LREAL;
		SetPos:				LREAL;
		ModuloSetPos:		LREAL;
		SetVel:				LREAL;
		ActExternEncodPos 	AT %I* : UDINT;
		FileUpdate:			Basic_Monitor_FileUpdate_axis_typ;
		ActualDC  			: LREAL;// MilliAp
		stAbsEncoder:       ST_HomeAbsEncoder;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>