<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="eHomeModeOption" Id="{ff6e8c68-e25a-0fad-2a0e-5c850ca11a64}">
    <Declaration><![CDATA[
TYPE eHomeModeOption :
(
	eNEGATIVE := 0 ,
	ePOSITIVE := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>